[package]
name = "enquo-core"
version = "0.0.0-git"
edition = "2021"

[dependencies]
aes-gcm-siv = "0.11"
ciborium = "0.2"
hmac = "0.12"
cretrit = "0.1"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
thiserror = "1.0"

[dev-dependencies]
hex-literal = "0.3"
quickcheck = "1.0"
