[package]
name = "enquo-core"
description = "Core library providing encrypted querying operations"
license = "MIT"
homepage = "https://enquo.org"
repository = "https://github.com/enquo/enquo-core"
keywords = ["encryption", "search", "query", "ore"]
categories = ["algorithms", "cryptography"]
exclude = ["/.git*", "Cargo.toml.orig"]
version = "0.0.0-git"
edition = "2021"

[dependencies]
aes-gcm-siv = "0.11"
ciborium = "0.2"
hmac = "0.12"
cretrit = "0.4"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
sha2 = "0.10"
thiserror = "1.0"
unicode-normalization = "0.1"

[dev-dependencies]
hex-literal = "0.3"
quickcheck = "1.0"
rand = "0.8"
