[package]
name = "enquo"
description = "Rust dynamic library for Ruby enquo-core"
license = "MIT"
repository = "https://github.com/enquo/enquo-core"
homepage = "https://enquo.org"
readme = "../../../README.md"
keywords = ["encryption", "search", "query", "ore", "ruby"]
categories = ["algorithms", "cryptography"]
version = "0.0.0"
edition = "2021"

[dependencies]
enquo-core = { path = "../../../rust" }
serde_json = "1.0"
magnus = "0.5"
hex = "0.4"

[lib]
crate-type = ["cdylib"]
